2003-12-29  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/TV/Echostar.pm (parse_tree): fix date parsing for year-end wraparound!

2003-11-01  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_retrieve_some): follow next page of results

2003-09-20  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo.pm: use strict

2003-08-31  Kingpin  <mthurn@verizon.net>

	* t/echostar-advanced.t: new file

	* lib/WWW/Search/Yahoo/TV/Echostar.pm (native_setup_search): set _allow_empty_query if doing Advanced search;
	(parse_tree): parse result count in Advanced search results;
	added pod for how to do Advanced search

2003-08-27  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_retrieve_some): fixed for moreover.com links

	* lib/WWW/Search/Yahoo/TV/Echostar.pm (ignore_channels): new method

	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_retrieve_some): fix parser for new page layout

2003-07-29  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo/TV/Echostar.pm (native_setup_search): fix TZ setting(?); undo "fix" for preprocess_ bug

	* lib/WWW/Search/Yahoo/Japan/News.pm: undo "fix" for preprocess_ bug

2003-07-27  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo/TV/Echostar.pm: move episode title to after show name

2003-07-14  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo/TV/Echostar.pm: new backend

2003-07-13  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo/DE.pm: new backend donated by Roland Moriz <roland at moriz.de>

2003-06-24  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo/Japan/News.pm: fix parsing for new yahoo.co.jp page format

2003-05-14  Kingpin  <mthurn@megapipe.net>

	* lib/WWW/Search/Yahoo.pm (parse_tree): fix parsing for new yahoo.com page format

2003-01-23  Kingpin  <mthurn@carbon>

	* lib/WWW/Search/Yahoo.pm (parse_tree): fix parsing for new yahoo.com page format

2002-12-20  Kingpin  <mthurn@carbon.>
