@@ -15,7 +15,7 @@ $iDebug = 0;
 $iDump = 0;
 # This query returns 1 page of results:
 &my_test('normal', 'Tina Fey', 1, 24, $iDebug, $iDump);
-cmp_ok(5, '<=', $WWW::Search::Test::oSearch->approximate_hit_count,
+cmp_ok(1, '<', $WWW::Search::Test::oSearch->approximate_hit_count,
        'approximate_hit_count');
 $WWW::Search::Test::oSearch->ignore_channels(qw( ETV KNBC ));
 &my_test('normal', 'Tina Fey', 1, 5, $iDebug, $iDump);
@@ -25,6 +25,7 @@ sub my_engine
   my $sEngine = shift;
   $WWW::Search::Test::oSearch = new WWW::Search($sEngine);
   ok(ref($WWW::Search::Test::oSearch), "instantiate WWW::Search::$sEngine object");
+  $WWW::Search::Test::oSearch->env_proxy('yes');
   } # my_engine
 
 sub my_test
